# clover

./: .$diagram.drawio.bkp  README.md  create_dataset.py  parse_results.py  pyproject.toml  results.csv  run_experiments.py
datasets/: dataset1.json
logs/: 1674318425-058659-nsgaii;pop_size=300;n_gen=100;cross_prob=1.0;mut_prob=0.2;.csv  1674318453-281072-nsgaii;pop_size=300;n_gen=100;cross_prob=1.0;mut_prob=0.7;.csv  1674318455-9267104-nsgaii;pop_size=300;n_gen=100;cross_prob=1.0;mut_prob=0.9;.csv  1674318463-2966075-nsgaii;pop_size=300;n_gen=100;cross_prob=1.0;mut_prob=0.0;.csv  1674318487-6712263-nsgaii;pop_size=300;n_gen=100;cross_prob=1.0;mut_prob=0.8;.csv  1674318489-458641-nsgaii;pop_size=300;n_gen=100;cross_prob=1.0;mut_prob=0.4;.csv  1674318491-004688-nsgaii;pop_size=300;n_gen=100;cross_prob=1.0;mut_prob=0.6;.csv  1674318497-213329-nsgaii;pop_size=300;n_gen=100;cross_prob=1.0;mut_prob=0.5;.csv  1674318499-6364896-nsgaii;pop_size=300;n_gen=100;cross_prob=1.0;mut_prob=0.3;.csv  1674318502-113877-nsgaii;pop_size=300;n_gen=100;cross_prob=1.0;mut_prob=0.1;.csv  1674318510-0613062-nsgaii;pop_size=300;n_gen=100;cross_prob=1.0;mut_prob=1.0;.csv  1674318722-1509516-nsgaii;pop_size=300;n_gen=200;cross_prob=1.0;mut_prob=0.0;.csv  1674318727-3131702-nsgaii;pop_size=300;n_gen=200;cross_prob=1.0;mut_prob=0.6;.csv  1674318745-05031-nsgaii;pop_size=300;n_gen=200;cross_prob=1.0;mut_prob=0.8;.csv  1674318753-7405412-nsgaii;pop_size=300;n_gen=200;cross_prob=1.0;mut_prob=0.4;.csv  1674318756-1895812-nsgaii;pop_size=300;n_gen=200;cross_prob=1.0;mut_prob=0.3;.csv  (+260 more)
(+21 files in other folders)
