[tool.poetry]
name = "placement-multiprovider-clouds"
version = "0.1.0"
description = "Latency-Aware Cost-Efficient Provisioning of Composite Applications in Multi-Provider Clouds"
authors = ["Paulo Severo <paulo.severo@edu.pucrs.br>"]
readme = "README.md"
packages = [{include = "simulator"}]

[tool.poetry.dependencies]
python = "^3.7.1"
Cython = "^0.29.32"
pymoo = "0.5.0"
networkx = "2.6.2"
matplotlib = "3.5.0"
numpy = "1.21.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipykernel = "^6.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 135
